# vxkonsol

./: README.md  pubspec.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: global_controller.dart  hotkeys.dart  search_result_sorter.dart  window_setup.dart
lib/cubits/: theme_cubit.dart  theme_state.dart
lib/cubits/search/: search_cubit.dart  search_state.dart
lib/cubits/theme/: theme_cubit.dart  theme_state.dart
lib/models/: search_result.dart
lib/native_apis/: program_fetcher.dart  program_info.dart  window_search.dart
lib/screens/: main_screen.dart
lib/theme/: app_theme.dart
lib/widgets/: help_section.dart  search_box.dart  search_result_item.dart  search_results_list.dart  shortcut_info_widget.dart  window_controls.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp
windows/runner/native_utils/: CMakeLists.txt  ProgramFinder.cpp  ProgramFinder.h  SettingsPages.cpp  SettingsPages.h  ShellExecution.cpp  ShellExecution.h  UwpFinder.cpp  UwpFinder.h  common_utils.cpp  common_utils.h  winsearch.cpp  winsearch.h
